# openenv-email-triage

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  models.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py
