[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "OpenEnv environment for email triage"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
# ✅ FIX 3: Changed from app:app to app:main
server = "server.app:main"